[skip ci] Bug 2012634 - "Phabricator Revisions" table overflows on X axis on mobile

--- a/extensions/PhabBugz/web/style/phabricator.css
+++ b/extensions/PhabBugz/web/style/phabricator.css
@@ -164,6 +164,7 @@ span[class^="review-status-icon-"]::before {
  */
 
 #module-phabricator-revisions .module-content {
+  overflow-x: auto;
   padding: 0;
 }
 
